Fixed initial image spacing

--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,8 @@ h1 {
 #moo{
   height: 70vh;
   width: auto;
-  margin-left: 2vw;
-  padding-top: 1vw;
+  margin-left: 17vw;
+  padding-top: 8vw;
 
 }
 .wow {
